infra/k8s/library-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-postgres
  template:
    metadata:
      labels:
        app: library-postgres
    spec:
      containers:
        - name: library-postgres
          image: postgres
          resources:
              limits:
                cpu: "500m"
                memory: "2G"
---
apiVersion: v1
kind: Service
metadata:
  name: library-postgres-srv
spec:
  selector:
    app: library-postgres
  ports:
    - name: library-db
      protocol: TCP
      port: 5432
      targetPort: 5432
