infra/k8s/zookeeper.yml
# https://www.magalix.com/blog/kafka-on-kubernetes-and-deploying-best-practice
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zookeeperapp
  template:
    metadata:
      labels:
        app: zookeeperapp
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeperapp
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zookeeperapp
