infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: auth-db.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-postgres-srv
                port:
                  number: 5432
    - host: kafka1.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka1-service
                port:
                  number: 9091
    - host: kafka2.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka2-service
                port:
                  number: 9092
    - host: kafka3.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka3-service
                port:
                  number: 9093
    - host: kafka4.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka4-service
                port:
                  number: 9094
    - host: kafka5.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka5-service
                port:
                  number: 9095
    - host: kafka6.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka6-service
                port:
                  number: 9096
    - host: reader.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-reader-srv
                port: 
                  number: 3000
    - host: editor.nubia.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-editor-srv
                port: 
                  number: 3000
    - host: nubia.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port: 
                  number: 3000
          - path: /services/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port: 
                  number: 3000
          - path: /services/gamebook
            pathType: Prefix
            backend:
              service:
                name: gamebook-srv
                port: 
                  number: 3000
          - path: /services/library
            pathType: Prefix
            backend:
              service:
                name: library-srv
                port: 
                  number: 3000
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-srv
          #       port: 
          #         number: 3000
